<resources>
    <string name="app_name">盖饭</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exit_app_tips">再按一次退出应用</string>
    <string name="login">登陆</string>
    <string name="login_tips">学号或密码不能为空！</string>
    <string name="account">学号</string>
    <string name="verfy">验证码</string>
    <string name="password">密码，一卡通查询密码</string>
    <string name="logining">正在登陆中</string>
    <string name="login_fail">登陆失败</string>
    <string name="login_success">登陆成功</string>
    <string name="secondbook">二手书</string>
    <string name="drugstore">杂货铺</string>
    <string name="my">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note">备注</string>
    <string name="add_note">添加描述，帮它选择最合适的主人...</string>
    <string name="yuan">\u00a5</string>
    <string name="get_bookinfo_fail">获取书籍信息失败</string>
    <string name="no_externalstorage">暂无外部存储</string>
    <string name="publish">发布</string>
    <string name="select">选择</string>
    <string name="has_selected">完成(%1$d/%2$d)</string>
    <string name="max_selected">对不起，最多只能选择%1$d张图片</string>
    <string name="complete">完成</string>
    <string name="please_to_input">请输入%1$s</string>
    <string name="price">价格</string>
    <string name="newold">新旧程度</string>
    <string name="count">数量</string>
    <string name="tele">手机号码</string>
    <string name="please_to_selectPics">请选择图片</string>
    <string name="sao_yi_sao">扫一扫</string>
    <string name="scanner">扫一扫</string>
    <string name="id_verify_fail">身份认证失败，请重新登录</string>
    <string name="max_pics">最多添加%1$d张照片</string>
    <string name="jifenzhiji">%1$d/%2$d</string>
    <string name="tishi">提示</string>
    <string name="want_delete">要删除这张照片吗?</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
    <string name="publishing">发布中...</string>
    <string name="net_error">啊啊，似乎出了点问题...</string>
    <string name="no_bookname">书名未知</string>
    <string name="no_publisher">暂无出版社</string>
    <string name="no_price">暂无价格</string>
    <string name="no_author">佚名</string>
    <string name="want_send">想要它？快给ta发短信</string>
    <string name="detail">详情</string>
    <string name="error">出错了</string>
    <string name="no_tele">该用户未设置手机号！</string>
    <string name="send_message">你好，同学，我在%1$s上看到您出售的《%2$s》，请问还有吗？</string>
    <string name="boo_pic">书本图片：</string>
    <string name="book_des">书本描述：</string>
    <string name="saleprice">售价:</string>
    <string name="originprice">原价:</string>
    <string name="originprice1">原价</string>
    <string name="new_old">新旧:</string>
    <string name="chengxin">成新</string>
    <string name="couont">数量:</string>
    <string name="telephone">手机:</string>
    <string name="baseinfo">基本信息:</string>
    <string name="zanwu">暂无</string>
    <string name="search">搜索</string>
    <string name="allPics">所有图片</string>
    <string name="describe">描述</string>
    <string name="publish_success">发布成功</string>
    <string name="title">标题</string>
    <string name="capture">拍照</string>
    <string name="album">相册</string>
    <string name="jpg">.jpg</string>
    <string name="no_title">无标题</string>
    <string name="no_describe">暂无描述</string>
    <string name="no_date">0-0</string>
    <string name="debris_des">杂货描述：</string>
    <string name="debris">杂货</string>

    <string name="debris_pic">杂货图片：</string>
    <string name="no_search_result">搜索不到相关物品，要不换个词试试吧...</string>
    <string name="schoollife">校园生活</string>
    <string name="totheend">已经到达最底部了</string>
    <string name="loading">加载中...</string>
    <string name="querying">查询中...</string>
    <string name="all">全选</string>
    <string name="delete">删除</string>
    <string name="delete_cannot_find">删除后无法找回哦</string>
    <string name="refersh_can_find">刷新后，又可以让大家看到我卖的东西啦</string>
    <string name="nothing_to_publish">这里什么都没有，快去发布一些东西吧...</string>
    <string name="nicheng_custom">昵称，可自定义</string>
    <string name="nicheng">昵称</string>
    <string name="operations">操作</string>
    <string name="refresh">刷新</string>
    <string name="delete_success">删除成功</string>
    <string name="querygrades">查询成绩</string>
    <string name="yikatong">一卡通</string>
    <string name="unnormalstatus">你的校园卡当前状态为不正常!</string>
    <string name="remain">余额:</string>
    <string name="guoduremain">过渡余额:</string>
    <string name="liushuichaxun">流水查询</string>
    <string name="buzhu">补助流水</string>
    <string name="xiugaimima">修改密码</string>
    <string name="guashi">挂失</string>
    <string name="grades">成绩</string>
    <string name="school_announce">校园公告</string>
    <string name="has_download">已下载过</string>
    <string name="confirm_delete">确定要删除%1$s吗?</string>
    <string name="no_download">您还未下载过任何文件...</string>
    <string name="min_max_money">单笔金额最小0.01元，最大100元</string>
    <string name="pwd">密码</string>
    <string name="money">金额</string>
    <string name="chongzhizhong">充值中...</string>
    <string name="modifying">修改中...</string>
    <string name="jiaoyi_fail_tryagain">交易失败，请重试</string>
    <string name="modify_fail_tryagain">修改密码失败，请重试</string>
    <string name="please_ensure_chongzhi_success">请检查卡上余额，确保充值成功</string>
    <string name="please_ensure_modify_success">请重启应用，查看密码是否修改成功</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="chongzhi_tips">向校园卡转账成功后，所转金额都会先是在过渡余额中，在餐厅等处的卡机上进行刷卡操作后，过渡余额即会转入校园卡</string>
    <string name="oldpassword">旧密码</string>
    <string name="newpassword">新密码</string>
    <string name="twice_password_not_equal">两次密码输入不一致</string>
    <string name="query_password_error">查询密码错误</string>
    <string name="password_change_success_login_again">密码修改成功，请重新登录</string>
    <string name="password_change_error">密码修改失败</string>
    <string name="change_password_tips">如果您修改了一卡通查询密码，请修改该APP的密码，否则请确认密码输入正确，重新登录\nPs:如果您修改了一卡通查询密码，并且当前设备的登陆账号不是您，您可能需要先将一卡通查询密码修改为以前的密码再进行登陆，登陆成功后再重新修改密码</string>
    <string name="change_password">修改密码</string>
    <string name="relogin">重新登录</string>
    <string name="title_activity_load_more_view_demo_aty">LoadMoreViewDemoAty</string>
    <string name="payinfo">账单信息</string>
    <string name="please_input_keywords">请输入关键词</string>
    <string name="starttime">开始时间</string>
    <string name="endtime">结束时间</string>
    <string name="deal_time">交易时间</string>
    <string name="shop_name">商户名称</string>
    <string name="deal_name">交易名称</string>
    <string name="deal_money">交易金额</string>
    <string name="deal_remain">交易后卡余额</string>
    <string name="title_activity_demoaty">Demoaty</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="start_downloading">开始下载</string>
    <string name="create_file_fail">创建文件失败</string>
    <string name="write_file_fail">写入文件失败</string>
    <string name="no_sdcard_fail">未发现存储卡，下载失败</string>
    <string name="downoad_complete">下载完成</string>
    <string name="download_fail">下载失败</string>
    <string name="shopcount">商户分组统计</string>
    <string name="dealtype">交易类型统计</string>
    <string name="see_pay_info">快来看看你大学%1$s年的消费情况吧</string>
    <string name="start_pay_info">开启账单</string>
    <string name="no">不了</string>
    <string name="producing_bill">正在生成账单...</string>
    <string name="year_bill">大学%1$s年账单</string>
    <string name="weiling">未领</string>
    <string name="yiling">已领</string>
    <string name="lossing">挂失中</string>
    <string name="loss_fail_tryagain">挂失失败，请重试</string>
    <string name="card_query_passsword">一卡通查询密码</string>
    <string name="library">图书馆</string>
    <string name="login_library_fail">图书馆登陆失败</string>
    <string name="logining_library">正在登陆图书馆...</string>
    <string name="changing_library">正在修改密码...</string>
    <string name="getting_library_info">正在获取图书馆信息...</string>
    <string name="exitaccount">退出账户</string>
    <string name="sms_content">短信内容</string>
    <string name="sms_fail">短信发送失败</string>
    <string name="sms_success">短信发送成功</string>
    <string name="cofirm_to_exit_edit">确定退出编辑吗？</string>
    <string name="sethuaname">起个昵称吧</string>
    <string name="get_bookinfo_nothing">未获取到书本信息，请重新扫描</string>
    <string name="home">首页</string>
    <string name="name">姓名</string>
    <string name="tree">树洞</string>
    <string name="max_3_topic">可最多添加3个话题,之间用空格隔开</string>
    <string name="content">内容</string>
    <string name="no_borrow_book">静以修身，学以养德</string>
    <string name="changeaccount">更改账号</string>
    <string name="change_library_password">修改图书馆密码</string>
    <string name="change_library_account">切换图书馆账号</string>
    <string name="borrowdate">借阅日期:</string>
    <string name="returndate">应还日期:</string>
    <string name="renew_fail">续借失败，请重试</string>
    <string name="renew">借阅</string>
    <string name="recommenthitory">荐购历史</string>
    <string name="recommendbook">荐购图书</string>
    <string name="recom">荐购</string>
    <string name="no_recommend">您还未荐购过任何书籍...</string>
    <string name="bookcode">ISBN</string>
    <string name="bookname">题名，必填</string>
    <string name="author">责任者，必填</string>
    <string name="publisher">出版社</string>
    <string name="publishDate">出版年</string>
    <string name="recommend_reason">推荐理由</string>
    <string name="bookname_not_null">题名不能为空</string>
    <string name="author_not_null">责任者不能为空</string>
    <string name="opencamera_wait">正在打开摄像头，请稍等</string>
    <string name="recommendfail">荐购失败</string>
    <string name="feedback">反馈建议</string>
    <string name="check_update">检查更新</string>
    <string name="aboutconten">版本号：1.4\n功能：\n1、发布二手书物品，快把闲置物品挂上去把\n2、浏览校园公告，从此再也不需要登教务处啦\n3、图书馆搜索、借阅、荐购一应俱全，方便到不行\n4、成绩查询，一查到底\n5、接入一卡通，该有的都有\n6、匿名发帖，把秘密丢在树洞\n7、搜索往年考试试卷，考试拿高分\nPs:这款APP从设计、开发到测试，只有我一个人，难免会有bug，所以当您遇到问题或者看哪里不爽，请给我反馈建议，我会及时回复，谢谢！</string>
    <string name="feedback_unread">你有%1$d条反馈建议回复未读</string>
    <string name="thismsgfrom">\n——本条消息来自</string>
    <string name="share">分享</string>
    <string name="share_succ">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="queryfail">查询失败</string>
   <string name="sharebilltitle">一卡通%1$d年消费情况"</string>
    <string name="sharebilltext"> %1$d年的大学时光，我一共使用一卡通进行了%2$s笔消费，共计%3$s元，快来看看你的大学账单吧！快下载盖饭——一款南信大学生专属APP！</string>
    <string name="shareyourbill">将您的消费情况分享出去，炫耀一下吧！</string>
    <string name="use_getfun_read">我正在使用盖饭查看%1$s</string>
    <string name="max_word_count">最多只能%1$d个字</string>
    <string name="response_floor">回复%1$d楼</string>
    <string name="card_first_use_dialog_content"><![CDATA[想看看你至今为止一卡通所有的花费情况吗？快点击“流水查询”——>“商户分组统计”，点击右下角按钮，选择“带我穿越”，就能看到你的消费情况啦]]></string>
    <string name="notification">通知</string>
    <string name="comment_count">有%1$d条新的评论</string>
    <string name="no_notification">暂无通知</string>
    <string name="please">跪求</string>
    <string name="share_please">亲爱的小伙伴，为了保证您以后可以在这里找到更多您想要的二手物品或者更快速的售出您的二手物品，希望您可以将App分享出去，让更多的南信大小伙伴来使用。\n跪求！！！！！！！！！</string>
    <string name="paper">试卷</string>
    <string name="general">通修课</string>
    <string name="professional">专业课</string>
    <string name="duohuo_support">多火工作室提供支持\n更多功能请访问 http://idoc.duohuo.org/</string>
    <string name="unlogin">您现在处于未登录状态</string>
    <string name="update_fail">修改失败</string>
    <string name="no_debris">这里是空的\n快来做第一个发布的人吧</string>
    <string name="update_success">修改成功</string>
    <string name="publish_fail">发布失败</string>
    <string name="upload_image_fail">上传图片失败</string>
    <string name="upload_bookinfo_fail">上传书籍基本信息失败</string>
    <string name="delete_fail">删除失败</string>
</resources>
