<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:orientation="vertical">

    <com.xfzj.getbook.views.view.BaseToolBar
        android:id="@+id/baseToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/fram"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"></FrameLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <FrameLayout
                android:id="@+id/framStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@mipmap/xiaohui" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_shape"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUnnormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/unnormalstatus"
                    android:textColor="#f70618"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvCardNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:lineSpacingExtra="50dp"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/remain"
                            android:textColor="@color/primary_text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="\u00a5"
                            android:textColor="@color/primary_text"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tvRemain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:textColor="@color/primary_dark"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/ivChongZhi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/chongzhi_selector" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/guoduremain"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="\u00a5"
                        android:textColor="@color/secondary_text"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvGuoduRemain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:textColor="@color/primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>


        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/card_xuxian_shape"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLiuShui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/liushuichaxun_selector"
                android:gravity="center_horizontal"
                android:text="@string/liushuichaxun"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/tvBuZhu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/buzhuliushui_selector"
                android:gravity="center_horizontal"
                android:text="@string/buzhu"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/tvXiuGaiMiMa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/xiugaimima_selector"
                android:gravity="center_horizontal"
                android:text="@string/xiugaimima"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/tvGuaShi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/guashi_selector"
                android:gravity="center_horizontal"
                android:text="@string/guashi"
                android:textColor="@color/secondary_text" />

        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/no_data" />
</LinearLayout>